@@ -23,6 +23,8 @@ Version 1.10.0+svn:
    * Fix attacker side being human in 6p_Team_Survival (bug #19400)
  * User interface:
    * Fixed excessive idle CPU usage in story screens without story text
+   * Made add-ons with markup characters at the start of their titles
+     display normally in the add-ons management dialogs (e.g. without colors)
  * Whiteboard
    * Fixed bug #19369 : Using planning mode can cause losing ability to move my
      units
